--- a/templates/index.html
+++ b/templates/index.html
@@ -4,8 +4,7 @@
   <h1 class="title">Hi, I am Botpsycho</h1>
 </center>
 <p>My internet name is Botpsycho. I am just a guy who loves Computers and Software. This is my personal website. Here you can find details about me.
- I have just created this website for fun.
-
+ 
 <div style="line-height:10px">
 <img src="/avatar.jpg" alt="avatar image"  width="300" height="300">
 </div>
@@ -14,8 +13,8 @@
 <h2>Website Details</h2>
 <p>
   <ul>
-    <li>This website was started on 11 June 2021.</li>
-    <li> This is clean and minimal website without javascript.</li>
+    <li>This website was started on 11 June 2022.</li>
+    <li> This is a clean and minimal website without javascript.</li>
     <li>If you find this website ugly, <a href="http://motherfuckingwebsite.com">click here</a>.</li>
   </ul>
 </p>
