--- a/templates/base.html
+++ b/templates/base.html
@@ -26,8 +26,8 @@
 	<span>[<a href="/contact">Contact</a>]</span>
       </nav>
       <blockquote id="header-quote">
-	❝ An excuse is the distance between<br>
-	<span>who you are and what you want to be ❞</span>
+	❝ If you don't sacrifice for what you want<br>
+	<span>what you want becomes the sacrifice❞</span>
       </blockquote>
     </header>
     <main>
