--- a/templates/base.html
+++ b/templates/base.html
@@ -26,8 +26,8 @@
 	<span>[<a href="/contact">Contact</a>]</span>
       </nav>
       <blockquote id="header-quote">
-	❝ If you don't sacrifice for what you want<br>
-	<span>what you want becomes the sacrifice❞</span>
+	❝ EVER TRIED. EVER FAILED. NO MATTER.<br>
+	<span>TRY AGAIN. FAIL AGAIN. FAIL BETTER ❞</span>
       </blockquote>
     </header>
     <main>
