--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,8 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Lora&family=Marck+Script&family=Rye&display=swap');
 
 :root {
-    --fg-color: #ffffff;
-    --bg-color: #000;
+    --fg-color:#ffffff;
+    --bg-color:#bf9b82;
     --color00: #E1578A;
     --color01: #FF69EB;
     --color02: #FF86C8;
@@ -171,5 +171,3 @@ footer{
 	max-width: 250px;
     }
 }
-
-
