added search bar

--- a/templates/index.html
+++ b/templates/index.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% block content %}
 <center>
- <blockquote">
+ <blockquote>
   <b>❝ EVER TRIED. EVER FAILED. NO MATTER.<br>
   <span>TRY AGAIN. FAIL AGAIN. FAIL BETTER ❞ </b></span>
  </blockquote>
