added search bar

--- a/templates/base.html
+++ b/templates/base.html
@@ -18,7 +18,7 @@
     <header>
       <div id="img-gallery">
       </div>
-      <h1>Botpsycho</h1>a
+      <h1>Botpsycho</h1>
       <form id="site-search">
        <input type="text" placeholder="Search Site">
        <button>go</button>
