changed image resolution

--- a/templates/index.html
+++ b/templates/index.html
@@ -10,7 +10,7 @@
 
 <p>My internet name is Botpsycho. I am just a guy who loves Computers and Software. This is my personal website. Here you can find details about me.
 <div style="line-height:10px">
-<img src="/avatar.jpg" alt="avatar image"  width="300" height="300">
+<img src="/avatar.jpg" alt="avatar image"  width="350">
 </div>
 
 
