added new website link

--- a/templates/index.html
+++ b/templates/index.html
@@ -18,8 +18,9 @@
 <p>
   <ul>
     <li>This website was started on 11 June 2022.</li>
-    <li> This is a clean and minimal website without javascript.</li>
-    <li>If you find this website ugly, <a href="http://motherfuckingwebsite.com">click here</a>.</li>
+    <li>This is a clean and minimal website without javascript.</li>
+    <li>If you find this website ugly, <a href="http://motherfuckingwebsite.com">click here</a>.</li><br>
+    <strong>You can visit my second website by clicking <a href=https://botpsycho.github.io>here</a>.
   </ul>
 </p>
 <br>
